fixed overflow on game

--- a/Employer Project/src/App.css
+++ b/Employer Project/src/App.css
@@ -207,8 +207,8 @@ button:active {
   transform: scale(95%);
 }
 .gameHolder {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
